--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "export": "next export"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "lucide-react": "^0.263.1",
-    "clsx": "^2.0.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
-    "eslint": "^8.0.0",
+    "eslint": "^9.30.1",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0"
