--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "react": "^18.0.0",
